tests/core/data/csl/InterfaceTests/InvalidDeclarations/missingParameterIO.csl
//Missing the paramter in/out modifier
interface missingParameterIO
{
	void Foo
		( string fooMe );

};	


